--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "smite-discord-bot-nodejs",
   "version": "1.0.0",
-  "description": "Discord bot built with the intention of mastering Node.js and building a useful tool for my friends and I for a game we enjoy",
-  "main": "src/index.ts",
+  "description": "Node.js Typescript Discord bot starter code - deploy to heroku",
+  "main": "./prod/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node -r dotenv/config ./prod/index.js"
@@ -14,9 +14,13 @@
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.31.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "eslint": "^8.12.0"
+  },
+  "engines": {
+    "node": "16.14.2"
   }
 }
